// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el componente ProductTitle Debe de mostrar el componente con el nombre del producto 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    Coffee Mug - Card without image
  </span>
</div>
`;

exports[`Pruebas en el componente ProductTitle Debe de mostrar el componente correctamente con el título personalizado 1`] = `
<span
  className="productDescription undefined"
>
  Custom Product
</span>
`;
